added createChat
