# cmd/messenger/main.go
@@ -57,6 +57,7 @@ func Router() {
 	router.HandleFunc("/register", authHandler.Register)
 	router.HandleFunc("/getChats", chatsHandler.GetChats)
 	router.HandleFunc("/getChat", chatsHandler.GetChat)
+	router.HandleFunc("/createPrivateChat", chatsHandler.CreatePrivateChat)
 	router.HandleFunc("/getProfileInfo", profileHandler.GetProfileInfo)
 	router.HandleFunc("/updateProfileInfo", profileHandler.UpdateProfileInfo)
 	router.HandleFunc("/changePassword", profileHandler.ChangePassword)
