# docs/swagger.json
@@ -132,8 +132,8 @@
                 }
             }
         },
-        "/createDialogue": {
-            "get": {
+        "/createPrivateChat": {
+            "post": {
                 "consumes": [
                     "application/json"
                 ],
@@ -141,15 +141,15 @@
                     "application/json"
                 ],
                 "summary": "creates dialogue",
-                "operationId": "CreateDialogue",
+                "operationId": "CreatePrivateChat",
                 "parameters": [
                     {
-                        "description": "Person",
+                        "description": "ID of person to create private chat with",
                         "name": "user",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.Person"
+                            "$ref": "#/definitions/delivery.userIDJson"
                         }
                     }
                 ],
@@ -157,11 +157,11 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/domain.Response-domain_Chats"
+                            "$ref": "#/definitions/domain.Response-delivery_chatIDStruct"
                         }
                     },
                     "400": {
-                        "description": "Person not authorized",
+                        "description": "Person not authorized | Пользователь, с которым вы хотите создать дилаог, не найден | Чат с этим пользователем уже существует",
                         "schema": {
                             "$ref": "#/definitions/domain.Response-domain_Error"
                         }
@@ -192,7 +192,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/delivery.getChatStruct"
+                            "$ref": "#/definitions/delivery.chatIDStruct"
                         }
                     }
                 ],
@@ -537,6 +537,14 @@
                 }
             }
         },
+        "delivery.chatIDStruct": {
+            "type": "object",
+            "properties": {
+                "chat_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "delivery.chatJson": {
             "type": "object",
             "properties": {
@@ -588,14 +596,6 @@
                 }
             }
         },
-        "delivery.getChatStruct": {
-            "type": "object",
-            "properties": {
-                "chat_id": {
-                    "type": "integer"
-                }
-            }
-        },
         "delivery.updateUserStruct-delivery_docsUserForGetProfile": {
             "type": "object",
             "properties": {
@@ -604,6 +604,14 @@
                 },
                 "user": {
                     "$ref": "#/definitions/delivery.docsUserForGetProfile"
+                }
+            }
+        },
+        "delivery.userIDJson": {
+            "type": "object",
+            "properties": {
+                "user_id": {
+                    "type": "integer"
                 }
             }
         },
@@ -707,6 +715,18 @@
                 },
                 "username": {
                     "type": "string"
+                }
+            }
+        },
+        "domain.Response-delivery_chatIDStruct": {
+            "type": "object",
+            "properties": {
+                "body": {
+                    "$ref": "#/definitions/delivery.chatIDStruct"
+                },
+                "status": {
+                    "type": "integer",
+                    "example": 200
                 }
             }
         },
